# vpnC

./: .gitignore  main.cpp
include/auth/: CertificateManager.h
include/config/: ConfigParser.h
include/core/: StateMachine.h
include/crypto/: KeyExchange.h
include/interface/: NetworkManager.h  TUNInterface.h
include/network/: UDPClient.h
include/utils/: Logger.h  Statistics.h
src/auth/: CertificateManager.cpp
src/config/: ConfigParser.cpp  OpenVPNConfig.cpp
src/core/: ConnectionManager.cpp  OpenVPNClient.cpp
src/crypto/: KeyExchange.cpp
src/interface/: NetworkManager.cpp  TUNInterface.cpp
src/network/: PacketProcessor.cpp
src/session/: OpenVPNSession.cpp
src/utils/: Logger.cpp  ThreadPool.cpp
workspace/openvpn_cpp/: CMakeLists.txt  README.md  main.cpp  sample.ovpn
workspace/openvpn_cpp/include/: authentication_manager.h  config_parser.h  openvpn_client.h  openvpn_protocol.h  openvpn_session.h  reconnection_manager.h  tun_interface.h
workspace/openvpn_cpp/include/auth/: AuthenticationManager.h
workspace/openvpn_cpp/include/config/: OpenVPNConfig.h
workspace/openvpn_cpp/include/core/: ConnectionManager.h  OpenVPNClient.h
workspace/openvpn_cpp/include/crypto/: EncryptionManager.h  HMACGenerator.h
workspace/openvpn_cpp/include/network/: PacketProcessor.h  SSLWrapper.h
workspace/openvpn_cpp/include/session/: OpenVPNSession.h  SessionManager.h
workspace/openvpn_cpp/include/utils/: ThreadPool.h
workspace/openvpn_cpp/src/: authentication_manager.cpp  config_parser.cpp  main.cpp  openvpn_client.cpp  openvpn_protocol.cpp  reconnection_manager.cpp  tun_interface.cpp
workspace/openvpn_cpp/src/auth/: AuthenticationManager.cpp
workspace/openvpn_cpp/src/config/: ConfigParser.cpp  OpenVPNConfig.cpp
workspace/openvpn_cpp/src/core/: StateMachine.cpp
workspace/openvpn_cpp/src/crypto/: EncryptionManager.cpp  HMACGenerator.cpp
workspace/openvpn_cpp/src/interface/: TUNInterface.cpp
workspace/openvpn_cpp/src/network/: PacketProcessor.cpp  SSLWrapper.cpp  UDPClient.cpp
workspace/openvpn_cpp/src/session/: SessionManager.cpp
workspace/openvpn_cpp/src/utils/: Statistics.cpp
